# AI-Datanalysis

./: Dockerfile  LICENSE  README.md  agent.py  app.py  code.py  docker-compose.yml  prompt.py  pyproject.toml  styles.py
.streamlit/: config.toml
css/: style.css
datasets/: digits.csv  everest_data.csv  ohlcv.csv  reproducibility_prompts.txt  sales_data.csv
maps_configs/: geojson_data.json
ragdata/: area_plot.txt  bar_plot.txt  barpolar_plot.txt  base_ref.txt  box_plot.txt  bubble_plot.txt  candle_plot.txt  choroplethmap_plot.txt  density_contour_plot.txt  densitymap_plot.txt  heatmap.txt  histogram_plot.txt  line_plot.txt  pie_plot.txt  polar_plot.txt  scatter_2d_plot.txt  scatter_3d_plot.txt  scattermap_plot.txt  sunburst_plot.txt  surface_plot.txt  table_plotly.txt  treemap_plot.txt  violin_plot.txt
